start implementing view model

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
   <string name="app_name">FunnyCats</string>
+  <string name="title_hello_cat_lover">Hello Cat Lover!</string>
 </resources>
